--- a/src/libs/sqlite/CMakeLists.txt
+++ b/src/libs/sqlite/CMakeLists.txt
@@ -1,7 +1,7 @@
-add_qtc_library(Sqlite
+add_qtc_library(Sqlite STATIC
   PROPERTIES AUTOMOC OFF AUTOUIC OFF
   PUBLIC_DEFINES
-      BUILD_SQLITE_LIBRARY
+      BUILD_SQLITE_STATIC_LIBRARY
       SQLITE_CORE
   DEPENDS Qt5::Core Threads::Threads ${CMAKE_DL_LIBS}
   PUBLIC_INCLUDES
