--- a/src/tools/clangbackend/CMakeLists.txt
+++ b/src/tools/clangbackend/CMakeLists.txt
@@ -1,7 +1,7 @@
 add_subdirectory(source)
 
 add_qtc_executable(clangbackend
-  DEPENDS Qt5::Core Qt5::Network clangbackend_lib Sqlite ClangSupport libclang
+  DEPENDS Qt5::Core Qt5::Network clangbackend_lib Sqlite ClangSupport libclang_static
   SOURCES
     ../qtcreatorcrashhandler/crashhandlersetup.cpp ../qtcreatorcrashhandler/crashhandlersetup.h
     clangbackendmain.cpp
